--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body id="t" class="offline">
+    <h1 id="enter-game-text">APPUIE SUR LE BOUTON POUR JOUER !</h1>
     <div id="messageBox" class="sendmessage">
          <!-- <h1 style="text-align: center;font-family: 'Open Sans', sans-serif;">Press Space to start</h1> -->
          <div class="niokbutton" onclick="okbuttonsend()"></div>
